# lens

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/: .env.example  .gitignore  eslint.config.mjs  next.config.ts  package.json  trigger.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/actions/: chat.ts
apps/web/app/wasm-probe/: page.tsx
apps/web/components/: brand-mark.tsx  dashboard-assembly.tsx  property-chat.tsx  query-provider.tsx  technology-mark.tsx
apps/web/components/analysis/: accessible-data-table.tsx  analysis-evidence-link.tsx  analysis-exploration.tsx  analysis-failure-notice.tsx  analysis-navigation.tsx  analysis-result.tsx  execution-story.tsx  exploration-analysis.tsx  formatters.test.ts  formatters.ts  geographic-context-card.tsx  grammar-analysis.tsx  insight-header.tsx  living-dashboard.tsx  performance-context.tsx  performance-proof.tsx  performance-view.tsx  query-arena-card.tsx  query-arena-experience.tsx  query-arena-presentation.test.ts  query-arena-presentation.ts  query-arena-reporter.tsx  semantic-analysis-result.tsx  system-intelligence-client.ts  time-series-analysis.tsx  time-series-scale.test.ts  time-series-scale.ts  time-series-trace.tsx  tuning-client.ts  yearly-price-trace.tsx
apps/web/components/chat/: message-part.tsx
apps/web/components/data-sources/: data-source-manager.tsx  data-source-selection.tsx  delete-data-source-dialog.tsx
apps/web/components/query-arena/: tuning-proposal-card.tsx
apps/web/components/ui/: location-map.tsx
apps/web/components/wasm/: time-series-probe.tsx  yearly-price-probe.tsx
apps/web/lib/analysis/: contracts.ts  conversation-response.ts  execution.ts  executor.ts  exploration-adapter.test.ts  exploration-adapter.ts  exploration-load.ts  load.ts  prepare-analysis.test.ts  prepare-analysis.ts  query-compiler.test.ts  query-compiler.ts  results.ts  semantic-load.test.ts  semantic-load.ts  semantic-plan.ts  semantic-prompt.test.ts  semantic-query-compiler.test.ts  (+8 more)
apps/web/scripts/: benchmark-exploration-formats.mjs
crates/lens-api/: Cargo.toml
crates/lens-api/src/: main.rs
crates/lens-core/: Cargo.toml
crates/lens-core/src/: analysis_frames.rs  analytics.rs  arrow_stream.rs  exploration.rs  generic_table.rs  lib.rs  verification.rs
crates/lens-core/tests/fixtures/: leeds-bristol-monthly-volume.arrow  manchester-yearly-generic.arrow  manchester-yearly.arrow
crates/lens-wasm/: Cargo.toml
crates/lens-wasm/src/: lib.rs
db/clickhouse/migrations/: 0001_query_arena_history.sql  0002_query_arena_learning.sql
db/postgres/migrations/: 0001_query_recipes.sql  0002_data_sources.sql  0003_transferable_query_learning.sql  0004_physical_tuning.sql
docs/diagrams/: README.md
scripts/: prepare-wasm-package.mjs  run-wasm-pack.mjs
(+127 files in other folders)
