[workspace]
members = [
    "crates/lens-api",
    "crates/lens-core",
    "crates/lens-wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Espen van Ingen"]
description = "High-performance Arrow analytics components for Lens"
license = "Apache-2.0"
repository = "https://github.com/espenloov/lens"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
