[package]
name = "lens-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lens-core = { path = "../lens-core" }

[lints]
workspace = true
