[package]
name = "lens-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
arrow-array = "59.1.0"
arrow-ipc = { version = "59.1.0", features = ["lz4"] }
arrow-schema = "59.1.0"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
sha2 = "0.10.9"
thiserror = "2.0"

[lints]
workspace = true
