[package]
name = "lens-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lens-core = { path = "../lens-core" }
wasm-bindgen = "0.2.126"

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]
